# sesame

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  mw320_sdk.cmake  run_tests  toolchain.cmake
board/: 88MW320_xx_xxxx_flash.ld  88MW320_xx_xxxx_ram.ld  board.c  board.h  clock_config.c  clock_config.h  flash-layout.txt  qemu.ld  sdmmc_config.c  sdmmc_config.h
docs/: teardown.md
include/: app_crypto.h  app_logging.h  board_support.h  config_manager.h  controller.h  debug_console.h  dhcp.h  gpio.h  httpd.h  idcm_msg.h  leds.h  logging.h  logging_levels.h  logging_stack.h  matter_task.h  mqtt.h  mw300_rd_net.h  network.h  ota.h  pic_uart.h  pin_mux.h  psm.h  rtc_support.h  string_util.h  subscription_manager.h  syslog.h  time_util.h  util.h  wifi_config.h  wm_net.h
include/config/: FreeRTOSConfig.h  FreeRTOSIPConfig.h  core_http_config.h  core_mqtt_agent_config.h  core_mqtt_config.h  iot_config_common.h  mbedtls_app_config.h  mbedtls_qemu_config.h
libraries/c_sdk/standard/common/include/private/: letsencrypt_ca.h
libraries/crypto/src/: iot_crypto.c
libraries/logging/: iot_logging_task_dynamic_buffers.c
libraries/logging/include/: iot_logging_task.h
marvell/WMSDK/mw320/sdk/src/core/wmtime/: hwrtc.c
marvell/WMSDK/mw320/sdk/src/drivers/common/: mdev_aes.c
marvell/WMSDK/mw320/sdk/src/incl/: autoconf.h
marvell/WMSDK/mw320/sdk/src/platform/os/freertos/: os.c
marvell/WMSDK/mw320/sdk/tools/OpenOCD/: gdbinit
marvell/WMSDK/mw320/sdk/tools/OpenOCD/interface/: ftdi.cfg
marvell/boards/mw300_rd/aws_demos/application_code/: leds.c  leds.h  mqtt.h  network.c  network.h  pic_uart.c  pic_uart.h
marvell/boards/mw300_rd/aws_demos/config_files/: app_logging.h
marvell/boards/mw300_rd/ports/wifi/: iot_wifi.c
patches/: freertos_plus_tcp_dns_fallback.patch  freertos_plus_tcp_ipv4_checksum.patch  freertos_plus_tcp_ipv6_ula.patch  freertos_plus_tcp_mdns.patch  freertos_plus_tcp_mdns_cross_family.patch  freertos_plus_tcp_mdns_txt.patch
proto/: api.options  api.proto  app_config.options  app_config.proto
src/: board_main.c  ccm_alt.c  config_manager.c  dhcp.c  dns_hook_default.c  fault.c  gpio.c  hardfault.c  hardfault_irq.S  httpd.c  idle_task.c  ksdk_mbedtls.c  leds.c  libc_wrappers.c  logging.c  main.c  mbedtls_error_dummy.c  mqtt.c  mw300_rd_net.c  network_manager.c  newlib_wrappers.c  ota.c  ota_client.c  pic_uart.c  pin_mux.c  qemu_main.c  qemu_psm.c  qemu_stubs.c  random.c  rtc_support.c  string_util.c  subscription_manager.c  syslog.c  time_util.c  util.c
src/matter/: CMakeLists.txt  embed_be.cmake  matter_berry_port.c  matter_crypto_shim.c  matter_door_plugin.be  matter_mdns.c  matter_mdns.h  matter_task.c  matter_tasmota_shim.c  matter_tasmota_shim.h
src/qemu/: qemu_main.c  qemu_mbedtls.c  qemu_stubs.c  qemu_vectors.c
test/: CMakeLists.txt  board_support.c  board_support.h  qemu_vectors.c  test_capture.h  test_config_manager.c  test_logging.c  test_main.c  test_matter.c  test_pic_uart.c  test_runner.c  test_string_util.c  test_util.c  unity_config.h  unity_port.c
test/host/: CMakeLists.txt  _harness.py  conftest.py
test/host/harness/: CMakeLists.txt  harness.c  harness.h  host_sockets.c  log_stdout.c  slirp_hostfwd.c
test/host/harness/include/: FreeRTOSConfig.h  FreeRTOSIPConfig.h  fsl_debug_console.h
test/host/harness/stubs/: dns_hook_stub.c  time_util.c  util_stub.c
test/host/httpd/: CMakeLists.txt  conftest.py  main_httpd.c  test_httpd.py
test/host/matter/: CMakeLists.txt  conftest.py  matter_test_main.c  psm_stub.c  test_matter.py
test/host/mqtt/: CMakeLists.txt  broker.py  conftest.py  main_mqtt.c  test_mqtt.py
test/host/ota/: CMakeLists.txt  conftest.py  main_ota.c  ota_stub.c
test/host/syslog/: CMakeLists.txt  conftest.py  main_syslog.c  test_syslog.py
test/integration/: CMakeLists.txt  _harness.py  conftest.py  pyproject.toml
test/integration/harness/: CMakeLists.txt  harness.c  harness.h
test/integration/harness/stubs/: time_util.c  util_stub.c
test/integration/httpd/: CMakeLists.txt  conftest.py  main_httpd.c
test/integration/mqtt/: CMakeLists.txt  conftest.py  main_mqtt.c
test/integration/ota/: CMakeLists.txt  conftest.py  main_ota.c  ota_stub.c  test_ota.py
test/integration/syslog/: CMakeLists.txt  conftest.py  main_syslog.c  test_syslog.py
test/matter/: board_support.c  board_support_flash.c  matter_test_utils.c  matter_test_utils.h  test_ec_raw.c  test_matter_crypto.c  test_matter_mdns.c  test_matter_mdns_responder.c  test_matter_sesame.c  test_matter_tasmota.c
test/stubs/: stub_fsl_uart.c  stub_gpio.c  stub_hostname.c  stub_os.c  stub_psm.c  stub_psm.h
test/unity/: unity.c
tools/: flash_and_monitor.sh  monitor.py  run_on_device.sh  run_tests.sh  solidify_berry_matter.sh  solidify_single.be
tools/OpenOCD/: flashprog.py  gdbinit  openocd.cfg  openocd.py  ramload.py
tools/axf2firmware/: axf2firmware.c
